--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   "author": "David Eldridge aka DaveyRojo",
   "license": "MIT",
   "devDependencies": {
+    "typedoc": "^0.25.0",
     "typescript": "^5.0.0",
-    "vitest": "^1.0.0",
-    "typedoc": "^0.25.0"
+    "vitest": "^3.1.2"
   }
 }
